missingkids/less/accordion.less
#accordion {
    &.panel-group .panel {
        border: 0;
        background-color: transparent;
    }
    .panel-heading {
        background-color: transparent;
        border: 0;
        border-radius: 10px;
        padding: 16px 0 0;
    }
    .panel-title {
        > a {
            background-color: #939597;
            border-radius: 10px 10px 0 0;
            color: @white;
            display: block;
            padding: 16px;
        }
        > a.collapsed {
            border-radius: 10px;
            transition: border-radius 0.3s ease-in;
        }
    }
    .panel-body {
        border: 1px solid #939597;
        border-top: 0;
        border-radius: 0 0 10px 10px;
    }
}

.more-less {
    float: right;
    color: @white;
    font-size: 16px;
    margin-right: 16px;
    height: 16px;
    width: 16px;
}

#form-accordion {
    .panel {
        margin-bottom: 0;
        padding: 0;
        .panel-heading {
            padding: 0;
            text-align: left;
            background: none;
            .panel-title {
                a {
                    background: @gray-accordion;
                    border-radius: 10px;
                    color: @white;
                    display: block;
                    font-size: 13px;
                    padding: 10px 10px 10px 16px;
                }
                > a.collapsed {
                    border-radius: 10px;
                    transition: border-radius 0.3s ease-in;
                }
                a[aria-expanded="true"] {
                    border-radius: 10px 10px 0 0;
                }
                .more-less {
                    margin-right: 0;
                }
            }
        }
        .panel-collapse {
            .panel-body {
                background: transparent;
                border: 1px solid @gray-dark;
                border-top: 0;
                :last-child {
                    margin-bottom: 0;
                }
                .form-horizontal {
                    .control-label {
                        padding-top: 0;
                    }
                }
            }
        }
    }
    .panel + .panel {
        margin-top: 16px;
    }
}

